# hu

./: .gitignore  CLAUDE.md  CLI.md  COMMANDS.md  Cargo.toml  FILETYPES.md  LICENSE  PLAN.md  README.md  REFACTOR.md  SAVINGS.md  SESSION_REPORT.md  TODO.md  TOKENS.md  TO_IMPLEMENT.md  clippy.toml  deploy.sh  eks-shell  eks-shell.py  install.sh  justfile  settings.example.toml  tarpaulin-report.html  tarpaulin-report.json
.claude/: settings.json
.claude/commands/: coverage.md
.claude/commands/hu/: read.md
.claude/hooks/hu/: pre-grep.sh  pre-read.sh  pre-webfetch.sh  pre-websearch.sh  session-end.sh  session-start.sh
.github/workflows/: build-amd-linux.yml  build-arm-linux.yml  build-deb-amd.yml  build-deb-arm.yml  build-macos.yml  ci.yml  format.yml  pipeline.yml  publish.yml  release.yml  style.yml  test.yml  types.yml
doc/: RUST_CLI_RULES.md  a.md  to-implement.md  tokens.md
doc/rules/: checklist.md  dependencies.md  testing.md
example/hooks/: README.md  pre-grep.sh  pre-read.sh  session-end.sh  session-start.sh  settings.example.json
scripts/: bump.sh  install-cross-deps.sh
src/: aws.rs  cli.rs  config.rs  github.rs  jira.rs  main.rs
src/aws/: mod.rs
src/commands/: eks.rs
src/context/service/: mod.rs  tests.rs
src/cron/: service.rs
src/data/: cli.rs  config.rs  db.rs  mod.rs  paths.rs  pricing.rs  queries.rs  schema.rs  service.rs  sync.rs  types.rs
src/data/display/: mod.rs  tests.rs
src/docs/: cli.rs  mod.rs  service.rs  types.rs
src/docs/display/: mod.rs  tests.rs
src/eks/: kubectl.rs  mod.rs  types.rs
src/eks/kubectl/: mod.rs  tests.rs
src/eks/types/: mod.rs  tests.rs
src/gh/: auth.rs  cli.rs  client.rs  failures.rs  helpers.rs  login.rs  mod.rs  prs.rs  sync.rs  types.rs
src/gh/client/: mod.rs  tests.rs
src/gh/failures/: mod.rs  tests.rs
src/gh/fix/: mod.rs  tests.rs
src/gh/runs/: mod.rs  tests.rs
src/git/: mod.rs  service.rs  types.rs
src/install/: cli.rs  mod.rs  templates.rs  types.rs
src/jira/: adf.rs  auth.rs  auth_handler.rs  cli.rs  client.rs  comments.rs  create.rs  mod.rs  search.rs  service.rs  show.rs  sprint.rs  sprints.rs  tickets.rs  types.rs  update.rs
src/jira/auth/: mod.rs  tests.rs
src/jira/client/: comments.rs  create.rs  issues.rs  mod.rs  tests.rs  transitions.rs
src/jira/update/: mod.rs  tests.rs
src/mcp/: cli.rs  handlers.rs  mod.rs  server.rs  tools.rs  types.rs
src/newrelic/: client.rs  config.rs  display.rs  mod.rs  service.rs  types.rs
src/newrelic/client/: mod.rs  tests.rs
src/newrelic/display/: mod.rs  tests.rs
src/pagerduty/: client.rs  config.rs  display.rs  mod.rs
src/pagerduty/client/: mod.rs  tests.rs
src/pagerduty/display/: mod.rs  tests.rs
src/pagerduty/types/: mod.rs  tests.rs
src/pipeline/: aws.rs  display.rs  mod.rs  types.rs
src/pipeline/display/: mod.rs  tests.rs
src/read/interface/: mod.rs  tests.rs
src/read/outline/: mod.rs  tests.rs
src/sentry/: client.rs  config.rs  display.rs  mod.rs  service.rs  types.rs
src/sentry/display/: mod.rs  tests.rs
src/setup/: bootstrap.rs  cli.rs  config.rs  display.rs  dotfiles.rs  mod.rs  packages.rs  pkgs.rs  run.rs  ssh.rs  status.rs  types.rs
src/shell/: cli.rs  mod.rs
src/slack/: auth.rs  channels.rs  client.rs  config.rs  handlers.rs  messages.rs  mod.rs  search.rs  service.rs  tests.rs  tidy.rs  types.rs
src/util/: config.rs  mod.rs  output.rs
src/utils/: docs_index.rs  fetch_html.rs  grep.rs  mod.rs
tests/: cli.rs
tests/integration_tests/: cli.rs  common.rs  mod.rs
tests/unit_tests/: common.rs  environment.rs  mod.rs
(+99 files in other folders)
