[package]
name = "hu"
version = "0.1.0-a1"
edition = "2021"
description = "Dev workflow CLI"
license = "MIT"

[[bin]]
name = "hu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color", "wrap_help"] }
anyhow = "1.0"
directories = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
octocrab = "0.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
terminal_size = "0.4"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
async-trait = "0.1"
urlencoding = "2"
oauth2 = "4.4"
axum = "0.7"
open = "5"
base64 = "0.22"
rand = "0.8"

[dev-dependencies]

[profile.release]
lto = true
strip = true
codegen-units = 1
