[package]
name = "hu"
version = "0.1.1"
edition = "2021"
description = "Dev workflow CLI"
license = "MIT"

[[bin]]
name = "hu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color", "wrap_help"] }
anyhow = "1.0"
directories = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
octocrab = "0.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
terminal_size = "0.4"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
async-trait = "0.1"
urlencoding = "2"
oauth2 = "4.4"
axum = "0.7"
open = "5"
base64 = "0.22"
rand = "0.8"
comfy-table = "7.2.2"
hex = "0.4.3"
dirs = "6.0.0"
rusqlite = { version = "0.31", features = ["bundled"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]

[profile.release]
lto = true
strip = true
codegen-units = 1
