[package]
name = "hu"
version = "0.1.11"
edition = "2021"
rust-version = "1.80"
description = "Dev workflow CLI for Claude Code integration - Jira, GitHub, Slack, PagerDuty, Sentry, NewRelic, AWS"
license = "MIT"
repository = "https://github.com/aladac/hu"
homepage = "https://github.com/aladac/hu"
readme = "README.md"
keywords = ["cli", "developer-tools", "workflow", "claude-code", "devops"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "hu"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "color", "wrap_help"] }
anyhow = "1.0"
directories = "5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process"] }
octocrab = "0.44"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
terminal_size = "0.4"
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
async-trait = "0.1"
urlencoding = "2"
oauth2 = "4.4"
axum = "0.7"
open = "5"
base64 = "0.22"
rand = "0.8"
comfy-table = "7.2.2"
hex = "0.4.3"
dirs = "6.0.0"
rusqlite = { version = "0.31", features = ["bundled"] }
owo-colors = "4"
libc = "0.2"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1

[package.metadata.deb]
maintainer = "Adam Ladachowski <chi@sazabi.pl>"
copyright = "2025, Adam Ladachowski"
extended-description = "Dev workflow CLI for Claude Code integration with Jira, GitHub, Slack, PagerDuty, Sentry, NewRelic, and AWS."
section = "utility"
priority = "optional"
assets = [
    ["target/release/hu", "usr/bin/", "755"]
]
